--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format:fix": "prettier --write .",
     "test": "jest --watch",
+    "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
+    "test:coverage:html": "jest --coverage --coverageReporters=html",
     "prepare": "husky"
   },
   "dependencies": {
@@ -30,9 +33,11 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "^10.1.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
