--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint",
     "format:fix": "prettier --write .",
     "test": "jest --watch",
+    "test:ci": "jest --bail --passWithNoTests",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "test:coverage:html": "jest --coverage --coverageReporters=html",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.js": "eslint --cache --fix"
   },
   "dependencies": {
     "next": "15.2.4",
@@ -37,6 +45,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.0",
