--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "*.js": "eslint --cache --fix"
   },
   "dependencies": {
+    "@readme/httpsnippet": "^11.0.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "clsx": "^2.1.1",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "sass": "^1.86.3"
   },
   "devDependencies": {
