--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@readme/httpsnippet": "^11.0.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
